[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop-bound-py"
version = "0.1.0"
description = "Hard cap on agent loop iterations to prevent runaway execution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "loop", "guard", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-loop-bound-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_loop_bound = ["py.typed"]
